working on 'testing /product-categories'
