# src/routers/index.js
@@ -2,4 +2,4 @@ exports.adminRouter = require("./admin.router");
 exports.tokensRouter = require("./tokens.router");
 exports.productsRouter = require("./products.router");
 exports.imagesRouter = require("./images.router");
-exports.categoriesRouter = require("./categories.router");
+exports.categoriesRouter = require("./product-categories.router");
